--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.1",
+    "axios": "^1.9.0",
+    "cloudinary": "^2.6.0",
     "inngest": "^3.35.1",
     "mongoose": "^8.14.1",
     "next": "^15.3.1",
