--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cloudinary": "^2.6.0",
     "inngest": "^3.35.1",
     "mongoose": "^8.14.1",
+    "nanoid": "^5.1.5",
     "next": "^15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
